# telegram-bot

./: .gitignore  BRANCH_STRUCTURE.md  DEPLOYMENT.md  README.md  Untitled.ipynb  car_publisher.py  client_bot.py  config.py  database.py  forward_bot.py  forward_session.session  forward_session.session-journal  hello.docx  main.py  post_formatter.py  pyproject.toml  requirements.txt  simple_bot.py  simple_database.py  simple_telegram_bot.py  test_bot_features.py  test_environment.py  test_google_sheets.py  test_local_bot.py
api/: api.py  config.py  simple_database.py
tests/: test_api.py  test_post_formatter.py  test_simple_database.py
