[tool.poetry]
name = "zalogautouz-bot"
version = "0.1.0"
description = "Telegram bot for car listings from banks"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "zalogautouz_bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
gspread = "^5.12.0"
oauth2client = "^4.1.3"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 